# KF-GINS-DEV

./: CMakeLists.txt  README.md  README_CN.md  README_notes.md
Analysis/: dead-reckoning.ipynb  todos.txt
config/: kf-gins.yaml  kf-gins_4season.yaml  kf-gins_ros.yaml
dataset/: convert_4season_gps.py  convert_4season_imu.py  convert_ros_gps.py  convert_ros_gps_eskf.py  convert_ros_gt.py  convert_ros_imu.py  convert_ros_imu_eskf.py  dataset_utils.py
dataset/4season_data/: README.md
src/: kf_gins.cpp  notes.md
src/common/: angle.h  earth.h  logging.h  types.h
src/fileio/: gnssfileloader.h
src/kf-gins/: gi_engine.cpp  gi_engine.h  kf_gins_types.h
